refactor: replace `collect(Collectors.toList())` with `.toList()` in PolarionService for streamlined code